syntax = "proto3";

package github.com.juliocesarscheidt.blog;

option go_package = "./protofiles;blogpb";

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message CreateBlogRequest {
  Blog blog = 1;
}

message CreateBlogResponse {
  Blog blog = 1; // it will have a blog id
}

message ReadBlogRequest {
  string id = 1;
}

message ReadBlogResponse {
  Blog blog = 1;
}

message UpdateBlogRequest {
  Blog blog = 1;
}

message UpdateBlogResponse {
  Blog blog = 1;
}

message DeleteBlogRequest {
  string id = 1;
}

message DeleteBlogResponse {
  string id = 1;
}

message ListBlogRequest {
}

message ListBlogResponse {
  Blog blog = 1;
}

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse);
  rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse); // it could return NOT_FOUND
  rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse); // it could return NOT_FOUND
  rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse); // it could return NOT_FOUND
  rpc ListBlog(ListBlogRequest) returns (stream ListBlogResponse);
}
